deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: backend
          image: busybox
          command:
            - /app/servicebin
          livenessProbe:
            httpGet:
              path: /healthz
              port: 81
          readinessProbe:
            httpGet:
              path: /healthz
              port: 81
          ports:
            - containerPort: 80
              name: parent-bot
              protocol: TCP
            - containerPort: 81
              name: child-bot
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 30Mi
            limits:
              cpu: "1"
              memory: 1Gi
