deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-bot
  labels:
    app: backend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: slave-bot
  labels:
    app: backend
spec:
  ports:
    - port: 81
      protocol: TCP
  selector:
    app: backend
